PWA-395 fixed payment dialog not showing up after trial dialog

--- a/css/app.scss
+++ b/css/app.scss
@@ -3507,6 +3507,10 @@ button.preodayButton.noclick{
   padding: 1.875em;
 }
 
+#noPaymentMethod{
+  top:6.25em !important;
+}
+
 .content-check-modal{
   margin-bottom: 1.25em;
   line-height: 1.6;
